# pm

./: CLAUDE.md  docker-compose.yml
backend/: AGENTS.md  CLAUDE.md  Dockerfile  README.md  kanban.db  pyproject.toml  requirements.txt  test_kanban.db
backend/api/: index.py
backend/src/backend/: ai.py  database.py  main.py  models.py
backend/static/: 404.html  __next.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  index.html  index.txt
backend/static/404/: index.html
backend/static/_next/static/chunks/: 175f6f2692f0631d.js  220713f45b43ae17.css  6661eaf02b1a491b.js  810bf9007150952d.js  b7329f95b9500c1e.css  d61f2697d3e530aa.js  da29a4094cf66def.css  e7aca6185c0b9b45.js
backend/static/_not-found/: __next._full.txt  __next._head.txt  __next._index.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt  index.txt
backend/static/login/: __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  __next.login.__PAGE__.txt  __next.login.txt  index.html  index.txt
backend/tests/: __init__.py  conftest.py  test_main.py
docs/: DEVELOPER.md  PLAN.md  database-schema.md
frontend/: AGENTS.md  CLAUDE.md  vercel.json
frontend/src/app/: page.tsx
frontend/src/components/: AISidebar.test.tsx  AISidebar.tsx  AuthGuard.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.test.tsx  KanbanCard.tsx  KanbanColumn.tsx  LogoutButton.tsx
frontend/src/lib/: api.ts  kanban.ts  session.ts
frontend/src/test/: setup.ts
scripts/: CLAUDE.md  start.bat  start.sh  stop.bat  stop.sh
(+1 files in other folders)
